<resources>
    <string name="app_name">lianxi</string>
    <string name="zhuye">主页</string>
    <string name="ganhuo">干货</string>
    <string name="yingshi">影视</string>
    <string name="shuji">书籍</string>
    <string name="geren">个人</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>

    <string name="xlistview_header_hint_ready">松开刷新数据</string>

    <string name="xlistview_header_hint_loading">正在加载...</string>

    <string name="xlistview_header_last_time">上次更新时间：</string>

    <string name="xlistview_footer_hint_normal">查看更多</string>

    <string name="xlistview_footer_hint_ready">松开载入更多</string>
</resources>
