<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/fragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:layout_weight="13" />

        <RadioGroup

            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton


                android:text="@string/zhuye"
                android:button="@null"
                android:gravity="center"
                android:drawableTop="@drawable/zhuye"
                android:layout_weight="1"
                android:id="@+id/re_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"

                />

            <RadioButton
                android:drawableTop="@drawable/ganhuo"
                android:text="@string/ganhuo"
                android:gravity="center"
                android:button="@null"
                android:layout_weight="1"
                android:id="@+id/re_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"

                />

            <RadioButton
                android:drawableTop="@drawable/yingshi"
                android:gravity="center"
                android:text="@string/yingshi"
                android:button="@null"
                android:layout_weight="1"
                android:id="@+id/re_3"
                android:layout_width="0dp"
                android:layout_height="match_parent"

                />

            <RadioButton
                android:drawableTop="@drawable/shuji"
                android:gravity="center"
                android:text="@string/shuji"
                android:button="@null"
                android:layout_weight="1"
                android:id="@+id/re_4"
                android:layout_width="0dp"
                android:layout_height="match_parent"

                />

            <RadioButton
                android:drawableTop="@drawable/geren"
                android:gravity="center"
                android:text="@string/geren"
                android:button="@null"
                android:layout_weight="1"
                android:id="@+id/re_5"
                android:layout_width="0dp"
                android:layout_height="match_parent"

                />


        </RadioGroup>


    </LinearLayout>

</android.support.v4.widget.DrawerLayout>